--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>spring-tx</artifactId>
             <version>4.3.10.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>4.3.10.RELEASE</version>
+        </dependency>
 
     </dependencies>
     <build>
@@ -106,6 +111,8 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
+                    <server>tomcat-development-server</server>
+                    <port>6699</port>
                     <path>/</path>
                 </configuration>
             </plugin>
